automatically backed up by learn

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,1 +1,5 @@
-
+<form action="/checkout" method="POST">
+  <label for="item">Item To Purchase</label>
+  <input type="text" name="item">
+  <input type="submit">
+</form>
