--- a/views/index.erb
+++ b/views/index.erb
@@ -1,5 +1,5 @@
 <form action="/checkout" method="POST">
   <label for="item">Item To Purchase</label>
   <input type="text" name="item">
-  <input type="submit">
+  <input type="submit" id="submit">
 </form>
